# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--0.5
#

2004-11-19 01:40:16 GMT	John Goerzen <jgoerzen@complete.org>	patch-94

    Summary:
      Cleaned up Parser code
    Revision:
      missingh--head--0.5--patch-94


    modified files:
     ChangeLog libsrc/MissingH/ConfigParser/Parser.hs


2004-11-19 01:36:57 GMT	John Goerzen <jgoerzen@complete.org>	patch-93

    Summary:
      Switched to generalized token system for ConfigParser
    Revision:
      missingh--head--0.5--patch-93


    modified files:
     ChangeLog libsrc/MissingH/ConfigParser/Lexer.hs
     libsrc/MissingH/ConfigParser/Parser.hs
     libsrc/MissingH/Parsec.hs


2004-11-19 01:20:05 GMT	John Goerzen <jgoerzen@complete.org>	patch-92

    Summary:
      Added new Parsec stuff
    Revision:
      missingh--head--0.5--patch-92


    modified files:
     ChangeLog TODO libsrc/MissingH/Parsec.hs


2004-11-18 22:53:04 GMT	John Goerzen <jgoerzen@complete.org>	patch-91

    Summary:
      Updated test for parse problem
    Revision:
      missingh--head--0.5--patch-91


    modified files:
     ChangeLog testsrc/ConfigParser/Parsertest.hs


2004-11-18 22:48:59 GMT	John Goerzen <jgoerzen@complete.org>	patch-90

    Summary:
      Backed out patch-82 through patch-89; going back to separate lexer
    Revision:
      missingh--head--0.5--patch-90


    new files:
     libsrc/MissingH/ConfigParser/Lexer.hs
     libsrc/MissingH/ConfigParser/Parser.hs

    removed files:
     libsrc/MissingH/ConfigParser/Parser.hs

    modified files:
     ChangeLog testsrc/ConfigParser/Parsertest.hs


2004-11-18 22:13:17 GMT	John Goerzen <jgoerzen@complete.org>	patch-89

    Summary:
      More code reduction
    Revision:
      missingh--head--0.5--patch-89


    modified files:
     ChangeLog libsrc/MissingH/ConfigParser/Parser.hs


2004-11-18 22:06:07 GMT	John Goerzen <jgoerzen@complete.org>	patch-88

    Summary: